[gd_scene load_steps=8 format=3 uid="uid://dl370bk5bh5e"]

[ext_resource type="Script" uid="uid://cobr1uxr1tqop" path="res://scripts/stratinfo.gd" id="1_47vg7"]
[ext_resource type="FontFile" uid="uid://d0pvp6jwgricw" path="res://font/Fredoka-Regular.ttf" id="2_42461"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2c3wl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47vg7"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42461"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20q8e"]
bg_color = Color(0, 0, 0, 0.6666667)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_traun"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_47vg7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2c3wl")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_42461")
theme_override_font_sizes/font_size = 96
text = "Strategy Information"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 129.0
offset_right = 1745.0
offset_bottom = 315.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_42461")
theme_override_font_sizes/font_size = 48
text = "• Tit for Tat(TFT): Cooperates on the first move,then
copies whatever the opponent put last."
vertical_alignment = 1

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 256.0
offset_right = 1745.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_42461")
theme_override_font_sizes/font_size = 48
text = "•Always Cooperate(AC): Always cooperates every
move"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 356.0
offset_right = 1745.0
offset_bottom = 542.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_42461")
theme_override_font_sizes/font_size = 48
text = "•Always Defect(AD): Always defects every move"
vertical_alignment = 1

[node name="back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -482.1422
offset_top = -235.0
offset_right = -409.28442
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.1415927
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_47vg7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_42461")
theme_override_styles/hover = SubResource("StyleBoxFlat_20q8e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_traun")
text = "▶"
expand_icon = true

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 461.0
offset_right = 1745.0
offset_bottom = 647.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_42461")
theme_override_font_sizes/font_size = 48
text = "•Grim Trigger(GT): Cooperates until the opponent
defects and then always defects after that."
vertical_alignment = 1

[node name="next" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 478.0
offset_top = 243.0
offset_right = 550.8578
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_47vg7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_42461")
theme_override_styles/hover = SubResource("StyleBoxFlat_20q8e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_traun")
text = "▶"
expand_icon = true

[connection signal="button_up" from="Panel/back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="Panel/next" to="." method="_on_next_button_up"]
