[gd_scene load_steps=8 format=3 uid="uid://d1nbrdf0dtswh"]

[ext_resource type="Script" uid="uid://cobr1uxr1tqop" path="res://scripts/stratinfo.gd" id="1_4x48s"]
[ext_resource type="FontFile" uid="uid://d0pvp6jwgricw" path="res://font/Fredoka-Regular.ttf" id="2_gomg7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2c3wl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4x48s"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gomg7"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pitw4"]
bg_color = Color(0, 0, 0, 0.6666667)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qgnrd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4x48s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2c3wl")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_gomg7")
theme_override_font_sizes/font_size = 96
text = "Strategy Information"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 111.0
offset_right = 1745.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_gomg7")
theme_override_font_sizes/font_size = 42
text = "• Random(R): Randomly chooses between cooperate or 
defect"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 245.0
offset_right = 1745.0
offset_bottom = 431.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_gomg7")
theme_override_font_sizes/font_size = 42
text = "• Win-Stay-Lose-Shift(WSLS):Starts with Cooperating
then changes its move based on whether it's last move had a 
high payoff"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 383.0
offset_right = 1745.0
offset_bottom = 569.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_gomg7")
theme_override_font_sizes/font_size = 42
text = "•Tester(T): Defects first, then cooperates the next move.
It plays its next move based on how the opponent responded"
vertical_alignment = 1

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 494.0
offset_right = 1745.0
offset_bottom = 680.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_gomg7")
theme_override_font_sizes/font_size = 42
text = "•Joss(J): Plays Tit for Tat with a small chance of
defecting randomly"
vertical_alignment = 1

[node name="previous" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 560.0
offset_top = 306.0
offset_right = 632.8578
offset_bottom = 373.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.1415927
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_4x48s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gomg7")
theme_override_styles/hover = SubResource("StyleBoxFlat_pitw4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qgnrd")
text = "▶"
expand_icon = true

[connection signal="button_up" from="Panel/previous" to="." method="_on_previous_button_up"]
